--- a/config.ini
+++ b/config.ini
@@ -56,6 +56,6 @@
 	file = "yui-270.js"
 	tests = "yui"
 
-;[YUI 3.0.0]
-;	file = "yui-300.js"
-;	tests = "yui3"
+[YUI 3.0.0]
+	file = "yui-300b1.js"
+	tests = "yui3"
